--- a/InstallationGuide.html
+++ b/InstallationGuide.html
@@ -5,8 +5,7 @@
 <h2 id="I.InstallingFedora13Linux">I. Installing Fedora 13 Linux</h2>
 <p><strong>NOTE:</strong> If you're migrating from <strong>Qubes Alpha 1</strong>, and want to preserve your AppVMs (specifically your data), you should use <code></code><code>qvm-backup</code><code></code> tool to make a backup (Qubes Alpha 3 will let you automatically restore it later).</p>
 <p><strong>NOTE:</strong> Do not try to install Qubes Alpha 3 on top of an already installed <strong>Qubes Alpha 1</strong> -- you should reinstall everything from scratch!</p>
-<p><strong>NOTE:</strong> If you're migrating from <strong>Qubes Alpha 2</strong>, however, then <code></code><code>yum update</code><code></code> executed in Dom0 konsole should do the work, and you could skip this guide.</p>
-<p>First we need to install a minimal Linux distribution that would later become our Dom0 system. We strongly recommend choosing a <strong>64-bit Fedora 13 distribution</strong>.</p>
+<p><strong>NOTE:</strong> <del>If you're migrating from <strong>Qubes Alpha 2</strong>, however, then <code></code><code>yum update</code><code></code> executed in Dom0 konsole should do the work, and you could skip this guide.</del> Some people reported problems when upgrading from Alpha 2 to Alpha 3, so it seems like it might better to reinstall from scratch in that case too. First we need to install a minimal Linux distribution that would later become our Dom0 system. We strongly recommend choosing a <strong>64-bit Fedora 13 distribution</strong>.</p>
 <ol>
 <li>Download the 64-bit version of Fedora 13 installation DVD ISO:</li>
 </ol>
