--- a/UserFaq.html
+++ b/UserFaq.html
@@ -5,6 +5,7 @@
 <p>Yes. Xen doesn't use VT-x (nor AMD-v) for PV guests virtualization (it uses ring0/3 separation instead). But, of course, without VT-x, you will also not have VT-d -- see the next question.</p>
 <h3 id="Q:CanIinstallQubesonasystemwithoutVT-d">Q: Can I install Qubes on a system without VT-d?</h3>
 <p>Yes you can. You can even run a netvm but, of course, you will not benefit from DMA protection for driver domains. So, on a system without VT-d, everything should work the same, but there is no real security benefit of having a separate netvm, as the attacker can always use a simple DMA attack to go from netvm to Dom0.</p>
+<p><strong>But still, all the other Qubes security mechanisms, such as AppVM separation, work as usual, and you still end up with a significantly secure OS, much more secure then Windows, Mac, or Linux, even if you don't have VT-d'''</strong></p>
 <p>The above is in theory -- in practice, if you have a broken network card driver and try to run it in a netvm on a system without VT-d, it might crash your system. This might happen e.g. if the driver is not properly using DMA-API.</p>
 <h3 id="Q:CanIuseAMD-vinsteadofVT-x">Q: Can I use AMD-v instead of VT-x?</h3>
 <p>See this message:</p>
