--- a/InstallationGuide.html
+++ b/InstallationGuide.html
@@ -81,7 +81,8 @@ yum install knetworkmanager</code></pre></li>
 <h2 id="V.InstallingQubes">V. Installing Qubes</h2>
 <ol>
 <li><p>Install the Qubes Dom0 packages:</p>
-<pre class="wiki"><code>yum install qubes-core-dom0 qubes-gui-dom0
+<pre class="wiki"><code>yum install qubes-core-dom0
+yum install qubes-gui-dom0
 yum install qubes-manager</code></pre></li>
 </ol>
 <ol start="2">
