--- a/WikiStart.html
+++ b/WikiStart.html
@@ -15,7 +15,10 @@
 <li><a href="/wiki/wiki/SourceCode">Source Code</a></li>
 <li><a href="/wiki/wiki/DevelFaq">FAQ</a></li>
 </ul>
-<h2 id="Contact">Contact</h2>
+<ul>
+<li><a href="/wiki/wiki/ContributorsList">Contributors List</a></li>
+</ul>
+<h2 id="Contacts">Contacts</h2>
 <h3 id="Mailinglist">Mailing list</h3>
 <ul>
 <li>The group's email address: <code>qubes-devel@googlegroups.com</code></li>
