--- a/StickMounting.html
+++ b/StickMounting.html
@@ -16,7 +16,7 @@
 <ol start="5">
 <li>Back to Dom0 konsole -- in order to unmount the stick do the following:</li>
 </ol>
-<pre class="wiki"><code>xm block-detach random /dev/xvdi</code></pre>
+<pre class="wiki"><code>xm block-detach &lt;vmname&gt; /dev/xvdi</code></pre>
 <ol start="6">
 <li>You can remove the device.</li>
 </ol>
