--- a/SystemDoc.html
+++ b/SystemDoc.html
@@ -13,6 +13,10 @@
 <ul>
 <li><a href="/wiki/wiki/KdeDom0">KDE Dom0 packages for Qubes</a></li>
 </ul>
+<h2 id="Releaserelateddocumentation">Release related documentation</h2>
+<ul>
+<li><a href="/wiki/wiki/InstallationIsoBuilding">How to build Qubes installation ISO</a></li>
+</ul>
 <h2 id="SelectedSubsystemsDocumentation">Selected Subsystems Documentation</h2>
 <ul>
 <li><a href="/wiki/wiki/DVMimpl">Implementation of DisposableVMs</a></li>
