--- a/UserDoc.html
+++ b/UserDoc.html
@@ -8,4 +8,5 @@
 <li>File sharing between AppVMs</li>
 <li>Network isolated AppVMs</li>
 <li>Disposable AppVMs</li>
+<li><a href="/wiki/wiki/InstallNvidiaDriver">How to install Nvidia driver in dom0</a></li>
 </ul>
