--- a/SystemDoc.html
+++ b/SystemDoc.html
@@ -30,3 +30,6 @@
 <ul>
 <li><a href="/wiki/wiki/QubesNet">VM networking in Qubes</a></li>
 </ul>
+<ul>
+<li><a href="/wiki/wiki/Qfilecopy">InterVM file copy (used by DisposableVMs)</a></li>
+</ul>
