--- a/SystemDoc.html
+++ b/SystemDoc.html
@@ -22,7 +22,7 @@
 <li><a href="/wiki/wiki/DVMimpl">Implementation of DisposableVMs</a></li>
 </ul>
 <ul>
-<li><a href="/wiki/wiki/Qfileexchgd">File exchange daemon (used by DisposableVMs)</a></li>
+<li><a href="/wiki/wiki/Qfileexchgd">File exchange daemon (used by DisposableVMs) (note that at Beta1, this is obsolete, see InterVM file copy)</a></li>
 </ul>
 <ul>
 <li><a href="/wiki/wiki/Qmemman">VM Memory management daemon</a></li>
