--- a/SystemDoc.html
+++ b/SystemDoc.html
@@ -33,3 +33,6 @@
 <ul>
 <li><a href="/wiki/wiki/Qfilecopy">InterVM file copy (used by DisposableVMs)</a></li>
 </ul>
+<ul>
+<li><a href="/wiki/wiki/GUIdocs">Qubes GUI protocol</a></li>
+</ul>
