--- a/WikiStart.html
+++ b/WikiStart.html
@@ -15,10 +15,8 @@
 <li><a href="/wiki/wiki/SourceCode">Source Code</a></li>
 <li><a href="/wiki/wiki/DevelFaq">FAQ</a></li>
 </ul>
-<ul>
-<li><a href="/wiki/wiki/ContributorsList">Contributors List</a></li>
-</ul>
 <h2 id="Contacts">Contacts</h2>
+<p><em>Note: Please send all the questions regarding Qubes to the mailing list (see below)</em></p>
 <h3 id="Mailinglist">Mailing list</h3>
 <ul>
 <li>The group's email address: <code>qubes-devel@googlegroups.com</code></li>
@@ -26,9 +24,21 @@
 </ul>
 <p>To post to a group you don't need to subscribe, just send a message to the group's email address. You can subscribe either through the web interface (but then you need to create a google account), or by sending an empty message to:</p>
 <pre class="wiki"><code>qubes-devel+subscribe@googlegroups.com</code></pre>
-<h3 id="Projectadministrators">Project administrators</h3>
-<p><em>Note: Please send all the questions regarding Qubes to the mailing list. The below addresses are only for contacts in administration-related matters.</em></p>
+<h3 id="Coredevelopers">Core developers</h3>
+<p>(In the order of joining the project)</p>
+<ul>
+<li>Joanna Rutkowska &lt;joanna at invisiblethingslab dot com&gt; - architecture &amp; project management</li>
+</ul>
+<ul>
+<li>Rafal Wojtczuk &lt;rafal at invisiblethingslab dot com&gt; - architecture &amp; system-level stuff</li>
+</ul>
+<ul>
+<li>Tomasz Sterna &lt;tomek at xiaoka dot com&gt; - installer &amp; gui</li>
+</ul>
+<ul>
+<li>Marek Marczykowski &lt;marmarek at mimuw dot edu dot pl&gt; - core</li>
+</ul>
+<h3 id="Presscontact">Press contact</h3>
 <ul>
 <li>Joanna Rutkowska &lt;joanna at invisiblethingslab.com&gt;</li>
-<li>Rafal Wojtczuk &lt;rafal at invisiblethingslab.com&gt;</li>
 </ul>
