--- a/InstallationGuide.html
+++ b/InstallationGuide.html
@@ -1,3 +1,33 @@
 <h1 id="InstallationGuideforQubesBeta1">Installation Guide (for Qubes Beta 1)</h1>
 <p><strong>Qubes Beta 1 is coming in April! Stay tuned!</strong></p>
 <p>We're currently upgrading our infrastructure for this new release, and we no longer support installation of Alpha 3.</p>
+<p><strong>The instructions below are just a draft -- do not try to follow them now!</strong></p>
+<h2 id="HardwareRequirements">Hardware Requirements</h2>
+<p>Minimum:</p>
+<ul>
+<li>4GB of RAM</li>
+<li>64-bit Intel or AMD processor (x86_64 aka x64 aka AMD64)</li>
+<li>Intel GPU strongly preferred (if you have Nvidia GPU, prepare for some <a href="/wiki/wiki/InstallNvidiaDriver">troubleshooting</a>; we haven't tested ATI hardware)</li>
+</ul>
+<p>Additional requirements:</p>
+<ul>
+<li>Intel VT-d or AMD IOMMU technology (this is needed for effective isolation of your network VMs)</li>
+</ul>
+<p>If you don't meet the additional criteria, you can still install and use Qubes. It still offers significant security improvement over traditional OSes, because things such as GUI isolation, or kernel protection do not require special hardware.</p>
+<h2 id="DownloadinstallerISO">Download installer ISO</h2>
+<p>You can download the ISO from here:</p>
+<ul>
+<li>TODO (ISO link)</li>
+</ul>
+<p>Never trust files that you download from the internet, especially over plaintext connection! You are encouraged to also download and verify the signature file:</p>
+<ul>
+<li>TODO (ISO sig link)</li>
+</ul>
+<p>See this <a href="/wiki/wiki/VerifyingSignatures">page</a> for more info about how to download and verify our GPG keys.</p>
+<p>Once you verify this is an authentic ISO, you should burn it on a DVD. For instructions on how to &quot;burn&quot; it on a USB stick, see <a href="/wiki/wiki/UsbInstallation">this page</a>.</p>
+<h2 id="MigratingfromQubesAlpha3">Migrating from Qubes Alpha 3</h2>
+<p>TODO</p>
+<h2 id="KnownIssues">Known Issues</h2>
+<p>TODO</p>
+<h2 id="GettingHelp">Getting Help</h2>
+<p>TODO</p>
