--- a/UserDoc.html
+++ b/UserDoc.html
@@ -9,4 +9,5 @@
 <li>Network isolated AppVMs</li>
 <li>Disposable AppVMs</li>
 <li><a href="/wiki/wiki/InstallNvidiaDriver">How to install Nvidia driver in dom0</a></li>
+<li><a href="/wiki/wiki/CopyToDomZero">How to copy files to Dom0?</a></li>
 </ul>
