--- a/InstallNvidiaDriver.html
+++ b/InstallNvidiaDriver.html
@@ -1,5 +1,6 @@
 <h1 id="Nvidiaproprietarydriverinstallation">Nvidia proprietary driver installation</h1>
 <p>The NVIDIA proprietary driver works <strong>much</strong> more stable than nouveau, so it's good idea to install it. But this is somehow complicated: First - download it from nvidia.com site. Here &quot;NVIDIA-Linux-x86_64-260.19.44.run&quot; is used. Copy it to dom0. Every next step is done in dom0.</p>
+<p>See <a href="/wiki/wiki/CopyToDomZero">this page</a> for instruction on how to transfer files to Dom0 (where there is normallyno networking).</p>
 <h2 id="Userspacecomponents">Userspace components</h2>
 <p>Install libraries, Xorg driver, configuration utilities. This can by done by nvidia-installer:</p>
 <pre class="wiki"><code>./NVIDIA-Linux-x86_64-260.19.44.run --ui=none --no-x-check --keep --no-nouveau-check</code></pre>
